# somatic-sh

./: .gitignore  LICENSE  README.md  TESTING.md  docker-compose.yml  init.sql  poc.py  pyproject.toml  requirements.txt  somatic.yml
somatic/: __init__.py  cli.py  config.py  embedder.py  models.py  storage.py  watcher.py
